--- a/style.css
+++ b/style.css
@@ -21,23 +21,35 @@ body {
     text-align: center;
 }
 
-.cta {
+ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
 
+
+.cta {
 }
 
 .herosection, 
 .footer {
     background-color: #1f2937;
+}
+
+.header {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
 }
 
-.herocontent {
-
+.navlinks {
+    display: flex;
 }
 
-.headerlinks {
-
+.logo {
+    display: flex;
+    color: #F9FAF8;
+    font-size: 24px;
 }
 
 a {
@@ -52,6 +64,18 @@ a {
 
 }
 
+.heythere {
+    display: flex;
+}
+
 .cta {
 
+}
+
+.herocontent {
+    display: flex;
+}
+
+.blah {
+    display: flex;
 }
