--- a/style.css
+++ b/style.css
@@ -74,8 +74,22 @@ a {
 
 .herocontent {
     display: flex;
+    flex-direction: column;
 }
 
-.blah {
-    display: flex;
+.herotext {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.heroheader {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-family: 'Roboto';
+    font-weight: bold;
+}
+
+.herobutton {
+    background-color: #3882f6;
+    color: #F9FAF8;
 }
