--- a/style.css
+++ b/style.css
@@ -4,119 +4,18 @@ body {
     flex-direction: column;
 }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.hero {
+    border: 5px solid black;
+}
+
+.information {
+    border: 5px solid red;
 }
 
 .quote {
-    background-color: #e5e7eb;
-    color: 1F2937;
-    font-family: 'Roboto';
-    font-size: 36px;
-    font-style: italic;
-    font-weight: lighter;
-    text-align: center;
-}
-
-ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-}
-
-
-.cta {
-    display: flex
-    background-color: #3882f6;
-}
-
-.herosection, 
-.footer {
-    background-color: #1f2937;
-}
-
-.footer {
-    color: #F9FAF8;
-    display: flex;
-}
-
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.navlinks {
-    display: flex;
-}
-
-.logo {
-    display: flex;
-    color: #F9FAF8;
-    font-size: 24px;
-}
-
-a {
-    text-decoration: none;
-    font-family: 'Roboto';
-    font-size: 18px;
-    color: #E5E7EB;
-    
-
-}
-.quote {
-
+    border: 5px solid blue;
 }
 
 .cta {
-
+    border: 5px solid green;
 }
-
-.herocontent {
-    display: flex;
-    padding: 100px;
-    gap: 40px;
-    justify-content: center;
-
-}
-
-.herocontentleft {
-    display: flex;
-    flex-direction: column;
-}
-
-.heroimage {
-    display: flex;
-    flex-direction: column;
-    background-color: lightgreen;
-    color: #E5E7EB;
-    justify-content: center;
-    text-align: center;
-}
-
-
-.herotext {
-    font-size: 18px;
-    color: #E5E7EB;
-    width: 400px
-}
-
-.heroheader {
-    font-size: 48px;
-    color: #F9FAF8;
-    font-family: 'Roboto';
-    font-weight: bold;
-    width: 400px;
-    margin: 0;
-}
-
-.herobutton {
-    background-color: #3882f6;
-    color: #F9FAF8;
-    padding: 10px;
-    width: fit-content;
-}
-
