--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,15 +7,17 @@ body {
 }
 
 /* Layout and Structure*/
+
 /* Header Section */
 
 
-.nav-wrapper {
-    background-color: #1f2937;
-    font-family: 'Roboto', sans-serif;
-}
+.container--header,
+{
+    background-color: #1f2937; 
+    font-family: 'Roboto', sans-serif; 
+} 
 
-.nav {
+.header {
     display: flex;
     
     &__logo {
@@ -33,14 +35,13 @@ body {
 
 /* Hero and Overview Section*/
 
-.overview-wrapper {
-    display: flex;
-    background-color: #1f2937;
+.container--hero {
+    background-color: #1f2937; 
     font-family: 'Roboto', sans-serif;
-    }
+    display:flex;;
+} 
 
-
-.overview-container1 {
+.hero-intro {
     display: flex;
     flex-direction: column;
     font-family:'Roboto', sans-serif;
@@ -48,6 +49,7 @@ body {
     &__title {
         font-size: 48px;
         color: #f9faf8;
+        margin: 0;
     }
 
     &__text {
@@ -57,14 +59,19 @@ body {
     }
 
     &__button {
-
+        font-size: 18px;
+        height: 40px;
+        width: 100px;
+        background-color: #3882f6;
+        color: #f9faf8;
+        border-radius: 10px;
     }
 }
 
-.overview-container2 {
+.hero-image {
     display: flex;
 
-    &__image {
+    &__placeholder {
 
     }
 
@@ -73,23 +80,32 @@ body {
 
 /* Information Section */
 
-.information-wrapper {
+.information {
     border: 5px solid red;
     font-family: 'Roboto', sans-serif;
+
+    &__title {
+        font-size: 36px;
+        font-weight: bolder;
+        text-align: center;
+    }
+
+    &__button {
+
+    }
 }
 
-.information__title {
-    font-size: 36px;
-    font-weight: bolder;
-    text-align: center;
-}
+
+
 
 /* Quote Section */
 
-.quote {
-    border: 5px solid blue;
+.container--quote {
     background-color: #e5e7eb;
     font-family: 'Roboto', sans-serif;
+}
+.quote {
+    border: 5px solid blue;
     
     &__text {
         font-size: 36px;
@@ -107,8 +123,34 @@ body {
 
 /* Call to Action Section */
 
-.cta {
+.container--cta {
     border: 5px solid green;
+    display: flex;
+    justify-content: center;
+    &__title {
+        color:white;
+    }
+}
+
+.cta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__title {
+
+    }
+
+    &__text {
+
+    }
+
+    &__button {
+        flex-direction: row;
+
+    }
+
+
 }
 
 /* Typography */
