--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,10 +11,10 @@ body {
 /* Header Section */
 
 
-.container--header,
+.container--header
 {
     background-color: #1f2937; 
-    font-family: 'Roboto', sans-serif; 
+    font-family: 'Roboto', sans-serif;
 } 
 
 .header {
@@ -38,7 +38,7 @@ body {
 .container--hero {
     background-color: #1f2937; 
     font-family: 'Roboto', sans-serif;
-    display:flex;;
+    display:flex;
 } 
 
 .hero-intro {
@@ -104,10 +104,10 @@ body {
     background-color: #e5e7eb;
     font-family: 'Roboto', sans-serif;
 }
-.quote {
+.quote-text {
     border: 5px solid blue;
     
-    &__text {
+    &__para {
         font-size: 36px;
         font-style: italic;
     }
@@ -132,7 +132,7 @@ body {
     }
 }
 
-.cta {
+.cta-text {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,17 +141,19 @@ body {
 
     }
 
-    &__text {
+    &__para {
 
     }
-
-    &__button {
-        flex-direction: row;
-
-    }
-
-
 }
+
+.cta-button {
+    display: flex;
+
+    &__signup {
+        
+    }
+}
+
 
 /* Typography */
 
