--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,9 @@ body {
 {
     background-color: #1f2937; 
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 100px;
 } 
 
 .header {
@@ -24,6 +27,8 @@ body {
         color: #f9faf8;
         font-size: 24px;
         font-weight: 700;
+        display: flex;
+        align-items: center;
     }
 
     &__links {
@@ -39,10 +44,14 @@ body {
     background-color: #1f2937; 
     font-family: 'Roboto', sans-serif;
     display:flex;
+    justify-content: center;
+    padding-bottom: 100px;
+    gap: 80px;
 } 
 
 .hero-intro {
     display: flex;
+    width: 450px;
     flex-direction: column;
     font-family:'Roboto', sans-serif;
 
@@ -70,9 +79,15 @@ body {
 
 .hero-image {
     display: flex;
+    align-content: center;
+    justify-content: center;
+    color: #e5e7eb;
+    background-color: #3882f6;
+    padding: 20px 80px;
 
     &__placeholder {
-
+        display: flex;
+        align-items: center;
     }
 
 }
