--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -95,23 +95,39 @@ body {
 
 /* Information Section */
 
-.information {
-    border: 5px solid red;
-    font-family: 'Roboto', sans-serif;
 
-    &__title {
-        font-size: 36px;
-        font-weight: bolder;
-        text-align: center;
-    }
-
-    &__button {
-
-    }
+.container--information-card {
+    display: flex;
+    gap: 80px;
+    justify-content: center;
+    padding-bottom: 100px;
 }
 
 
+.information-title {
+    font-size: 36px;
+    font-weight: bolder;
+    text-align: center;
 
+}
+
+.information-card {
+    max-width: 200px;
+
+    &__box {
+        height: 200px;
+        width: 200px;
+        border: 5px solid #3882f6;
+        border-radius: 20px;
+    }
+
+    &__para {
+        font-size: 18px;
+        text-align: center;
+        margin: 10px 0 10px 10px;
+
+    }
+}
 
 /* Quote Section */
 
