--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,12 +16,15 @@ body {
     background-color: #1f2937; 
     font-family: 'Roboto', sans-serif;
     display: flex;
-    justify-content: center;
     padding-bottom: 100px;
 } 
 
 .header {
     display: flex;
+    justify-content: space-between;
+    width: 1070px;
+    margin: auto;
+
     
     &__logo {
         color: #f9faf8;
@@ -34,6 +37,9 @@ body {
     &__links {
         color: #e5e7eb;
         font-size: 18px;
+        display: flex;
+        
+    
     }
 }
 
@@ -47,6 +53,7 @@ body {
     justify-content: center;
     padding-bottom: 100px;
     gap: 80px;
+    margin: 0px;
 } 
 
 .hero-intro {
@@ -134,18 +141,23 @@ body {
 .container--quote {
     background-color: #e5e7eb;
     font-family: 'Roboto', sans-serif;
+    padding: 100px 0;    
 }
+
 .quote-text {
-    border: 5px solid blue;
     
     &__para {
         font-size: 36px;
         font-style: italic;
+        margin: auto;
+        width: 850px;
     }
 
     &__author {
-        font-size: 16px;
+        font-size: 20px;
         font-weight: bold;
+        width: 760px;
+        margin-left: auto;
 
     }
 }
@@ -154,34 +166,52 @@ body {
 
 /* Call to Action Section */
 
+
 .container--cta {
-    border: 5px solid green;
     display: flex;
+    margin: 100px 0;
     justify-content: center;
-    &__title {
-        color:white;
-    }
+}
+
+.container--cta-inner-box {
+    background-color: #3882f6;
+    padding: 40px 300px;
+    display: flex;
+    gap: 200px;
+    border-radius: 10px;
+
 }
 
 .cta-text {
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     &__title {
+        margin: 0;
+        color: #f9faf8;
 
     }
 
     &__para {
+        margin: 0;
+        color: #f9faf8;
 
     }
 }
 
 .cta-button {
     display: flex;
+    align-items: center;
+
 
     &__signup {
-        
+        height: 35px;
+        background-color: #3882f6;
+        color: #f9faf8;
+        font-weight: bold;
+        border-radius: 10px;
+        border: 2px solid #f9faf8;
+        padding: 0px 40px;
     }
 }
 
@@ -198,9 +228,8 @@ a {
 ul {
     list-style-type: none;
     display: inline-flex;
-    gap: 10px
+    gap: 20px
 }
-
 
 
   
