Changed margin of body to 0
Changing to 0 ensured background goes to edge
of screen.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,7 @@
 /* Normalise CSS */
 
 body {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+    margin: 0
 }
 
 /* Layout and Structure*/
