--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -214,6 +214,13 @@ body {
 }
 
 
+.footer {
+    text-align: center;
+    background-color: #1f2937;
+    color:#f9faf8;
+    padding: 20px;
+}
+
 /* Typography */
 
 a {
